--- a/kernel/parthsl.github.io/index.html
+++ b/kernel/parthsl.github.io/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="http://localhost:4000/" />
 <meta property="og:site_name" content="Deep Code Dive" />
 <script type="application/ld+json">
-{"@type":"WebSite","headline":"Deep Code Dive","url":"http://localhost:4000/","name":"Deep Code Dive","description":"Performance, Kernel programming, hacking and debugging.","@context":"http://schema.org"}</script>
+{"headline":"Deep Code Dive","@type":"WebSite","url":"http://localhost:4000/","name":"Deep Code Dive","description":"Performance, Kernel programming, hacking and debugging.","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Deep Code Dive" /></head>
 <body><header class="site-header" role="banner">
